--- a/MVVMaApp/MVVMApp/Base.lproj/Main.storyboard
+++ b/MVVMaApp/MVVMApp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="m4k-cj-zue">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="m4k-cj-zue">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -246,7 +246,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tXz-fS-8B0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="840.57971014492762" y="832.36607142857144"/>
+            <point key="canvasLocation" x="1712" y="1179"/>
         </scene>
         <!--Featured Items View Controller-->
         <scene sceneID="IVp-9D-zjK">
@@ -257,13 +257,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Featured" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8CT-8I-VVd">
-                                <rect key="frame" x="40" y="93" width="100" height="32"/>
+                                <rect key="frame" x="40" y="137" width="100" height="32"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="S8h-A1-6nf">
-                                <rect key="frame" x="20" y="155" width="374" height="628"/>
+                                <rect key="frame" x="20" y="199" width="374" height="584"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="W3u-Jm-MpP">
                                     <size key="itemSize" width="128" height="128"/>
@@ -279,6 +279,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
+                                        <connections>
+                                            <segue destination="DmF-fX-P8p" kind="showDetail" identifier="DetailFromFeatured" id="iBz-9u-WAS"/>
+                                        </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="IVg-8x-AKV">
                                         <rect key="frame" x="246" y="0.0" width="128" height="128"/>
@@ -303,7 +306,7 @@
                             <constraint firstItem="S8h-A1-6nf" firstAttribute="leading" secondItem="Z7B-sU-yii" secondAttribute="leading" constant="20" id="wBv-km-D7W"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="aoT-KX-mZG"/>
+                    <navigationItem key="navigationItem" id="iMO-ff-N5k"/>
                     <connections>
                         <outlet property="featuredCollectionView" destination="S8h-A1-6nf" id="PJQ-Xh-VQo"/>
                         <outlet property="featuredTitleLabel" destination="8CT-8I-VVd" id="bgq-oU-vOc"/>
@@ -311,7 +314,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aDr-nu-4GC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2602.898550724638" y="94.419642857142847"/>
+            <point key="canvasLocation" x="3416" y="473"/>
         </scene>
         <!--Statistics-->
         <scene sceneID="PFV-JQ-0Up">
@@ -327,7 +330,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tKw-ak-Vby" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3402.898550724638" y="97.767857142857139"/>
+            <point key="canvasLocation" x="4313.04347826087" y="97.767857142857139"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="xTo-Fl-xeQ">
@@ -341,7 +344,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="qI3-Di-EgC" kind="relationship" relationship="viewControllers" id="4oY-Eq-zbi"/>
-                        <segue destination="Ith-JV-x6h" kind="relationship" relationship="viewControllers" id="hv9-QZ-P0z"/>
+                        <segue destination="Acg-Iw-7qn" kind="relationship" relationship="viewControllers" id="hv9-QZ-P0z"/>
                         <segue destination="tVr-7Q-Oat" kind="relationship" relationship="viewControllers" id="UB9-R5-btm"/>
                     </connections>
                 </tabBarController>
@@ -370,12 +373,34 @@
             </objects>
             <point key="canvasLocation" x="863.768115942029" y="85.714285714285708"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="96H-Ty-pc6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Acg-Iw-7qn" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="aoT-KX-mZG"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gs9-OV-t5J">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Ith-JV-x6h" kind="relationship" relationship="rootViewController" id="9mA-AK-5cs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cld-TF-82Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2602.898550724638" y="94.419642857142847"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="iBz-9u-WAS"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="bookmark" catalog="system" width="112" height="128"/>
         <image name="wand.and.stars" catalog="system" width="128" height="113"/>
         <namedColor name="darkGradientTop">
-            <color red="0.12156862745098039" green="0.16470588235294117" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.12200000137090683" green="0.16500000655651093" blue="0.19599999487400055" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
